@@ -68,6 +68,7 @@ o use global variables directory /etc/indimail/control/global_vars for
 37. qupgrade.sh: added case for arch linux
 38. indimail-mta.spec, PKGBUILD, debian pre/post: skip service if dir doesn't
     exist
+39. svctool: allow default queue parameters for fetchmail service
 
 * 
 Release 2.13 Start 14/02/2021
